katalog/kong/example-app/petstore/petstore-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: petstore
spec:
  replicas: 1
  selector:
    matchLabels:
      app: petstore
  template:
    metadata:
      labels:
        app: petstore
    spec:
      containers:
        - name: petstore
          image: swaggerapi/petstore:1.0.5
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
