katalog/kong/example-app/petstore/petstore-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: petstore
  labels:
    app: petstore
  annotations:
    configuration.konghq.com: proxy
    kubernetes.io/ingress.class: 'kong'
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: petstore
