katalog/kong/example-app/petstore/petstore-private-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: private-petstore
  annotations:
    konghq.com/plugins: request-id,rate-limiting,basic-auth,prometheus
    kubernetes.io/ingress.class: 'kong'
spec:
  rules:
    - http:
        paths:
          - path: /user
            backend:
              serviceName: petstore
              servicePort: 8080
